--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
   <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/555ec7bf31.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link type="text/css" rel="stylesheet" href="style.css">
-  <title>Pig Game</title>
+  <title>Pig DOM Game</title>
 </head>
 
 <body>
@@ -24,10 +25,11 @@
           <h2>Game Rules:</h2>
           <li>The game has 2 players, playing in rounds</li>
           <li>In each turn, a player rolls a dice as many times as he/she wishes. Each result get added to his CURRENT score</li>
-          <li>BUT, if the player rolls a 1 (on either dice), all his/her ROUND score gets lost. After that, it’s the next player’s turn</li>
+          <li>BUT, if the player rolls a 1 (death pig) on either dice, all his/her ROUND score gets lost. After that, it’s the next player’s turn</li>
           <li>The player can choose to ‘Hold’, which means that his/her ROUND score gets added to the GLOBAL score. After that, it’s
           the next player’s turn</li>
           <li>The first player to reach the user-set winning score wins the game</li>
+          <li>Default winning score is set at 100 points</li>
           <div class="pig-container">
             <img src="pig2.png" class="pig2">
           </div>
@@ -58,9 +60,10 @@
     <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
     <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
     <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
-    <input type="text" placeholder="Final score" class="final-score">
+    <input type="text" placeholder="Enter Final score" class="final-score">
     <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
     <img src="dice-5.png" alt="Dice" class="dice" id="dice-2">
+    <div class="switch-div" id="switch" style="visibility: hidden">Switch Players!</div>
   </div>
   <footer>
     <a href="https://github.com/kenneth-liang"><i class="fab fa-github"></i></a>
@@ -74,8 +77,3 @@
 </body>
 
 </html>
-
-<!-- asdfasdf -->
-<!-- asdfasdf -->
-<!-- asdfasdf -->
-<!-- asdfasdf -->
