--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
   <footer>
     <a href="https://github.com/kenneth-liang"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/insightfulkennethliang/"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/devkennethliang/"><i class="fab fa-linkedin"></i></a>
     <a href="https://kennethliang.com/"><i class="fas fa-user-alt"></i></a>
   </footer>
   
